--- a/Gunslinger/app/src/main/assets/www/p5/Gunslinger/index.css
+++ b/Gunslinger/app/src/main/assets/www/p5/Gunslinger/index.css
@@ -1,6 +1,6 @@
 #defaultCanvas0 {
   position: fixed;
-  z-index: 500;
+  z-index: 0;
 /*  border: 2px solid #c3c3c3;
   border-radius: 13rem;*/
 }
@@ -33,3 +33,42 @@
   padding: 10px;
   text-align: center;
 }
+
+button {
+	position: absolute;
+	background-color: transparent;
+	color: transparent;
+	border: none;
+	border-radius: 5px;
+	padding: 0;
+	
+}
+
+button:active {
+	background-color: rgba(136,136,136, 0.2);
+	
+}
+
+.add {
+	border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
